tests/deploy_errors/connector_bad_with/error.txt
Error: 
    4 | create instance fake
    5 | with
    6 |   nope = "yes"
    7 | end;
      | ^^^ Argument used was not formally specified in originating definition: nope
